multi-container-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-container-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-container-app
  template:
    metadata:
      labels:
        app: multi-container-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: True
        - name: nginx-html-volume
          mountPath: /usr/share/nginx/html
          readOnly: True
      - name: multitool
        image: wbitt/network-multitool
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: nginx-html-volume
        configMap:
          name: nginx-configmap
